@@ -1,3 +1,12 @@
+2010-05-20 04:14-EDT Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Headers/Additions/GNUstepGUI/GSTheme.h: Added method 
+	displayPopUpMenu:... to handle the display of the popup menus for
+	themes.
+	* Source/GSThemeMenu.m: Added default implementation.
+	* Source/NSPopUpButtonCell.m: Call the displayPopUpMenu:... method
+	in the method attachPopUpWithFrame:inView:.
+
 2010-05-19 Quentin Mathe <quentin.mathe@gmail.com>
 
 	* Headers/AppKit/NSColorPicking.h: Removed Protocol.h import to 
